--- a/parte I - analise exploratoria de dados/2.medidas_de_posicao.ipynb
+++ b/parte I - analise exploratoria de dados/2.medidas_de_posicao.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "## Medidas de Posição\n",
     "\n",
-    "Usadas para resumir os dadosd de forma representativa"
+    "Usadas para resumir os dados de forma representativa"
    ]
   },
   {
