--- a/parte I - analise exploratoria de dados/1.resumo_de_dados.ipynb
+++ b/parte I - analise exploratoria de dados/1.resumo_de_dados.ipynb
@@ -205,7 +205,7 @@
    "id": "64be8c1f-59f8-4cdf-adb4-b30605337741",
    "metadata": {},
    "source": [
-    "#### Variaveis qualitativas ordinais\n",
+    "#### Variáveis qualitativas ordinais\n",
     "Existe uma ordenação entre as categorias, nesse caso, 'Anos de Estudo' é qualitativa ordinal, pois grau de instrução são baseados no número de anos de escolaridade"
    ]
   },
@@ -289,7 +289,7 @@
    "id": "ff2fa932-8925-4e5f-a2aa-c57a218022bd",
    "metadata": {},
    "source": [
-    "#### Variaveis qualitativas nominais\n",
+    "#### Variáveis qualitativas nominais\n",
     "Não existe uma ordenação entre as categorias, nesse caso, 'UF', 'Sexo', 'Cor' são qualitativas nominais"
    ]
   },
@@ -362,7 +362,7 @@
    "id": "9775865f-20bf-4eb0-a472-c2cba6139704",
    "metadata": {},
    "source": [
-    "#### Variaveis quantitativas continuas\n",
+    "#### Variáveis quantitativas contínuas\n",
     "Os valores pertencem a um intervalo de números reais e que resultam de uma mensuração, nesse caso, 'Altura' é variável contínua"
    ]
   },
