--- a/parte I - analise exploratoria de dados/2.medidas_de_posicao.ipynb
+++ b/parte I - analise exploratoria de dados/2.medidas_de_posicao.ipynb
@@ -112,7 +112,7 @@
     "valores atípicos. Se quisermos utilizar tais procedimentos com distribuição simétrica, o que se propõe é efetuar uma transformação das\n",
     "observações, de modo a se obter uma distribuição mais próxima da normal. \n",
     "\n",
-    "1) Log-transformação: Boa para dados assimétricos positivos com valores altos.\n",
+    "1) Log-transformação: Ideal para dados assimétricos positivos com valores altos.\n",
     "2) Raiz quadrada: Suaviza assimetrias leves e reduz a escala.\n",
     "3) Box-Cox: Ajusta os dados para aproximá-los de uma distribuição normal."
    ]
